# tmik_bgm_conditional_melody_generation_copy

./: .gitignore  Dockerfile  README.md  melody_generation.py  multi_melody_generation.py  pyproject.toml  train.py
debug/: utils.py
getmusic/engine/: lr_scheduler.py  solver.py
getmusic/modeling/roformer/: diffusion_roformer.py
getmusic/utils/: magenta_chord_recognition.py
make_midi_from_chroma/: data_preprocess.py  errors.py  magenta_chord_recognition.py  make_midi_from_chroma.py  make_midi_from_chroma_config.py
testdata/: test.mid
utils/: information.py  midi_processing.py  wav_processing.py
