[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cython>=0.25",
    "einops>=0.8.0",
    "librosa>=0.10.2.post1",
    "madmom",
    "markupsafe==2.1.3",
    "miditoolkit==0.1.17",
    "mido>=1.2.6",
    "numpy<2",
    "pretty-midi>=0.2.10",
    "pyfluidsynth>=1.3.4",
    "pyyaml>=6.0.2",
    "scipy>=0.16",
    "tensorboard>=2.18.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.66.5",
    "transformers>=4.48.2",
]

[tool.uv.sources]
madmom = { path = "madmom_install/madmom-0.17.dev0.tar.gz" }

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu124"]
